# Diploma

./: .gitignore  AGENTS.md  CLAUDE.md  DIPLOMA_CRITERIA.md  README.md  TODO.md  bibliography.bib  chapter2.tex  config-images.tex  config-lists.tex  config-tables.tex  intro.tex  main.tex  preamble.tex  pyproject.toml
.claude/: settings.json
.claude/agents/: build-publish.md  stats-reporter.md  thesis-searcher.md
.claude/src/: __init__.py  checks.py  sanity_check.py  sanity_report.json  sanity_report.txt
Diploma_latex/: abbreviations.tex  antiplagiat.aux  antiplagiat.bbl  antiplagiat.bcf  antiplagiat.blg  antiplagiat.fdb_latexmk  antiplagiat.fls  antiplagiat.run.xml  antiplagiat.tex  antiplagiat.toc  appA.tex  appA_standalone.aux  appA_standalone.bcf  appA_standalone.run.xml  appA_standalone.tex  appB.tex  appB_standalone.aux  appB_standalone.run.xml  appB_standalone.tex  appC.tex  appC_standalone.aux  appC_standalone.run.xml  appC_standalone.tex  bibliography.bib  chapter1.tex  chapter1_old.tex  chapter2.tex  chapter2_cross.tex  chapter2_exp1_linda.tex  chapter2_exp2_wason.tex  chapter2_exp3_246.tex  chapter2_intro.tex  chapter3.tex  chapter4.tex  conclusion.tex  config-images.tex  config-lists.tex  intro.tex  main.aux  main.bbl  (+12 more)
MyPaper/: REPORT.md  linda.tex  main.aux  main.tex  wason.tex  wason246.tex
diploma_agents(deprecated)/: AGENTS.md  SKILL_check_citations.md  SKILL_review_diploma.md  diploma_criteria.txt
experiments_raw_results/: RULES.md  common_config.py
mentor_guides/: about_structure.md  experiments_design.md  lit_review.md  requirements.md
(+1077 files in other folders)
