[project]
name = "diploma-agents"
version = "0.1.0"
description = "Diploma review agent tools"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.67.3",
    "pandas>=2.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "tavily-python>=0.7.23",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
